Подготовка проекта к предзащите
Введение в JavaScript

--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,7 @@
         <section class="filter">
           <form class="filter-form" action="https://echo.htmlacademy.ru" method="post">
             <fieldset class="filter-field">
-              <legend class="filter-list">Инфраструктура</legend>
+              <legend class="filter-list">Инфраструктура:</legend>
               <p class="filter-checkbox">
                 <input class="visually-hidden input-checkbox" type="checkbox" name="pool" value="yes" id="pool" checked>
                 <label class="input-checkbox-label filter-check-on" for="pool">Бассейн</label>
@@ -41,7 +41,7 @@
               </p>
             </fieldset>
             <fieldset class="filter-field">
-              <legend class="filter-list">Тип жилья</legend>
+              <legend class="filter-list">Тип жилья:</legend>
               <p class="filter-checkbox">
                 <input class="visually-hidden input-checkbox" type="checkbox" name="type" value="hotel" id="hotel" checked >
                 <label class="input-checkbox-label filter-check-on" for="hotel">Гостиница</label>
@@ -56,7 +56,7 @@
               </p>
             </fieldset>
             <fieldset class="filter-field filter-field-range">
-              <legend class="filter-list">Стоимость в сутки (Р)</legend>
+              <legend class="filter-list">Стоимость в сутки (Р):</legend>
               <div class="filter-text">
                 <div class="price-controls">
                   <label class="input-price-label" for="price-min">От
@@ -177,7 +177,7 @@
           </ul>
         </section>
       </main>
-      <footer class="main-footer">
+      <footer class="main-footer inner-footer">
         <span class="tag">#visitsedona</span>
         <div class="footer-social">
           <ul class="social-list">
