--- a/index.html
+++ b/index.html
@@ -85,11 +85,13 @@
           </ol>
         </section>
         <section class="booking">
-          <div class="booking-text">
-            <h2>Заинтересовались?</h2>
-            <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
+          <div class="booking-wrapper">
+            <div class="booking-text">
+              <h2>Заинтересовались?</h2>
+              <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
+            </div>
+            <a class ="booking-search" href="#">Поиск гостиницы в Седоне</a>
           </div>
-          <a class ="booking-search" href="#">Поиск гостиницы в Седоне</a>
           <form class="popup popup-modal" action="https://echo.htmlacademy.ru" method="post">
             <div class="popup-item">
               <label class="input-popup-label" for="check-in">Дата заезда:</label>
@@ -168,6 +170,6 @@
         </p>
       </footer>
     </div>
-    <script src="../550455-sedona-24/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
