--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/styles-min.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -52,8 +52,8 @@
                   <p class="option option-food">Всегда заказывайте фирменныей бургер, вы не разочаруетесь!</p>
                 </li>
                 <li class="features-item features-item-present">
-                  <h3 class="present">Суверниры</h3>
-                  <p class="option option-present">Не только китайского, но и местного производства</p>
+                  <h3 class="present">Сувениры</h3>
+                  <p class="option option-present">Не только китайского, но и местного производства!</p>
                 </li>
               </ul>
             </li>
@@ -137,6 +137,7 @@
           </form>
         </section>
         <div class="map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d498284.0972493455!2d-111.71083279685075!3d34.86931645595682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sby!4v1552503545179" width="1200" height="470" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </main>
       <footer class="main-footer">
@@ -170,6 +171,6 @@
         </p>
       </footer>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/script-min.js"></script>
   </body>
 </html>
