--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </form>
         </section>
         <div class="map">
-            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A38bd30dcf8869e0db15fc20bcdafa4e2a46d45aa11526567eeb01c0c321eaf3e&amp;source=constructor" width="1200" height="470" frameborder="0"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d592740.0056160726!2d-112.1037855728253!3d34.84467600857629!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sby!4v1552742812206" width="1200" height="470" style="border:0" allowfullscreen></iframe>
         </div>
       </main>
       <footer class="main-footer">
