--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/styles-min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -90,7 +90,7 @@
               <h2>Заинтересовались?</h2>
               <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
             </div>
-            <a class ="booking-search" href="#">Поиск гостиницы в Седоне</a>
+            <a class="booking-search" href="#">Поиск гостиницы в Седоне</a>
           </div>
           <form class="popup popup-modal" action="https://echo.htmlacademy.ru" method="post">
             <div class="popup-item">
