Проект на защиту (попытка №2)

--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/styles-min.css" rel="stylesheet">
   </head>
   <body class="inner-page">
     <div class="container">
@@ -81,10 +81,12 @@
         <div class="hotels-sort">
           <span class="number">Найдено: 3</span>
           <div class="sorting-list">
-            <span class="sorting-filter">Сортировка:</span>
-            <a class="sorting-item sorting-item-current" href="#">По цене</a>
-            <a class="sorting-item" href="#">По типу</a>
-            <a class="sorting-item" href="#">По рейтингу</a>
+            <p class="sorting-filter">Сортировка:</p>
+            <ul class="sorting-list-filter">
+              <li class="sorting-item sorting-item-current" href="#">По цене</li>
+              <li class="sorting-item" href="#">По типу</li>
+              <li class="sorting-item" href="#">По рейтингу</li>
+            </ul>
           </div>
           <div class="updown">
             <a class="sorting-up" href="#">
