--- a/catalog.html
+++ b/catalog.html
@@ -83,9 +83,9 @@
           <div class="sorting-list">
             <p class="sorting-filter">Сортировка:</p>
             <ul class="sorting-list-filter">
-              <li class="sorting-item sorting-item-current" href="#">По цене</li>
-              <li class="sorting-item" href="#">По типу</li>
-              <li class="sorting-item" href="#">По рейтингу</li>
+              <li class="sorting-item sorting-item-current">По цене</li>
+              <li class="sorting-item">По типу</li>
+              <li class="sorting-item">По рейтингу</li>
             </ul>
           </div>
           <div class="updown">
